--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -8,6 +8,8 @@
 
     <app-map #app_map [business]="true" (signUpEvt)="signUp()"></app-map>
     
+    <app-schedule-demo *ngIf="scheduleBusinessDemo"></app-schedule-demo>
+
     <div class="spotbie-menu-page-padding-top-not-logged"></div>    
 
 </div>
