--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -27,7 +27,11 @@
 
     Offer exclusive discounts, drinks & food, event merchandise, and more.
     
-    <br/><br/><br/>
+    <br/><br/>
+
+    <a class="spotbie-text-link text-uppercase" [routerLink]="['/business']">SCHEDULE DEMO</a>
+
+    <br/><br/>
 
 </p>
 
