--- a/src/app/features/user-features/user-features.component.css
+++ b/src/app/features/user-features/user-features.component.css
@@ -1,5 +1,5 @@
 .sb-top-headerImg{
-    background: url('../../../../assets/images/home_imgs/spotbie-miami.jpg') !important;
+    background: url('../../../assets/images/home_imgs/spotbie-miami.jpg') !important;
     background-position: center !important;
     background-size: cover !important;
     background-repeat: no-repeat !important;    
