--- a/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
+++ b/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
@@ -31,7 +31,7 @@
     max-width: 100%;
     min-width: 100%;
     background-repeat: no-repeat!important;
-    background-size: contain!important;
+    background-size: cover!important;
     background-position: center!important; 
 }
 
