--- a/src/app/spotbie/community-member/community-member.component.html
+++ b/src/app/spotbie/community-member/community-member.component.html
@@ -1,5 +1,6 @@
 <app-info-object [info_object]="business" 
                     [ad]="ad"
+                    [accountType]="accountType"
                     (closeWindow)="closeWindow()" 
                     *ngIf="infoObjectLoaded" 
                     [fullScreenMode]="fullScreenMode"></app-info-object>
