--- a/src/app/bugs/bugs.component.css
+++ b/src/app/bugs/bugs.component.css
@@ -1,9 +1,3 @@
-h2, h3, p, li {
-
-    color: black
-
-}
-
 h1, a {
 
     color: #4a8b00
@@ -16,8 +10,17 @@ h1, p {
 
 }
 
+textarea{
+    position: relative;
+    display: block;
+    margin: 0 auto;
+}
+
 .sb-mainWrapper {
-    background-color: rgba(255, 255, 255, .9)
+    background: url('../../assets/images/home_imgs/jpg/spotbie-login-background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;    
 }
 
 .termsWrapper{
@@ -28,6 +31,13 @@ h1, p {
     min-width: 96%;
     max-width: 96%
 
+}
+
+.sb-mainWrapper {
+    min-width: 100%;
+    max-width: 100%;        
+    min-height: 100vh;
+    background-color: rgba(255,255,255,.902);
 }
 
 /**WIDTH MEDIA QUERIES */
