--- a/src/app/features/features.component.css
+++ b/src/app/features/features.component.css
@@ -68,14 +68,14 @@ h2{
     max-width: 100%;
     height: 650px;
     min-height: 650px;
-    background: url(../../../assets/images/spotbie-miami.jpg);
+    background: url(../../assets/images/spotbie-miami.jpg);
     box-shadow: inset 0px -80px 65px #332f3e;
 }
 .fa-map-marker-alt{
     font-size: .8rem;
 }
 h4{
-    position: relative;
+    position: relative;/*  */
     margin: 0 auto;
     width: 80%;
     min-width: 80%;
