--- a/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.html
+++ b/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.html
@@ -4,8 +4,10 @@
     <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images + ')'}" *ngIf="!editMode && ad.id != 2"></div>
     
     <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + genericAdImage  + ')'}" *ngIf="editMode && ad.id == 2"></div>
-    
-    <div class='sb-ad-bottom'>
+
+    <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images  + ')'}" *ngIf="editMode && ad.id != 2"></div>
+
+    <div class='sb-ad-bottom' *ngIf="businessReady">
         
         <span class='spotbie-text-gradient sb-sponsoredName text-uppercase'>{{ business.name }}</span>
 
@@ -15,7 +17,7 @@
         <br/>
         <span class='sb-text-light-green-gradient sb-distanceMiles text-uppercase'>
             <i class='fas fa-map-marker-alt'></i>
-            {{ distance | number:'1.0':'en-US' }} miles
+            {{ distance | number:'1.1-2':'en-US' }} miles
         </span>
 
         <br/>
