All ads working!

--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.html
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.html
@@ -36,7 +36,11 @@
 </div>
 
 <app-community-member [business]="business"
-                        [ad]="ad"
-                        [qrCodeLink]="business.qr_code_link" 
-                        (closeWindowEvt)="closeRewardMenu()" 
-                        *ngIf="rewardMenuOpen"></app-community-member>
+                      [ad]="ad"
+                      [lat]="lat"
+                      [lng]="lng"
+                      [accountType]="accountType"
+                      [categories]="categories"
+                      [qrCodeLink]="business.qr_code_link" 
+                      (closeWindowEvt)="closeRewardMenu()" 
+                      *ngIf="communityMemberOpen"></app-community-member>
