--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
@@ -68,7 +68,7 @@
                     thousandSeparator="," 
                     mask="separator.0" />  
             
-            <h6 class='mt-3 mb-3 spotbie-text-gradient text-uppercase' 
+            <h6 class='mt-3 mb-3 sb-text-light-green-gradient text-uppercase' 
                 style="font-size: .8rem !important;" 
                 *ngIf="dollarValueCalculated && businessPointsDollarValue">
                 ${{ businessPointsDollarValue }} dollar value
