--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -158,7 +158,8 @@
                               [eventsClassification]="eventsClassification"
                               [accountType]="searchCategory" 
                               [categories]="number_categories" 
-                              [lat]="lat" [lng]="lng"></app-header-ad-banner>
+                              [lat]="lat" 
+                              [lng]="lng"></app-header-ad-banner>
 
       <div class='spotbie-search-results-title text-uppercase' *ngIf="type_of_info_object == 'yelp_business'">
 
@@ -343,7 +344,7 @@
                   {{ communityMember.description | truncateText:[20, '...'] }}
                 </p>
 
-                <p style='font-size: .4rem;' class="spotbie-text-gradient mt-3">
+                <p style='font-size: .5rem;' class="spotbie-text-gradient mt-3">
                   {{ communityMember.cleanCategories | truncateText:[20, '...']}}
                 </p>
 
@@ -636,15 +637,19 @@
   </div>
 
   <app-info-object [info_object]="infoObject" 
-                    [lat]="lat"
-                    [lng]="lng"
                     [eventsClassification]="eventsClassification"
                     [accountType]="searchCategory" 
+                    [categories]="number_categories" 
+                    [lat]="lat" 
+                    [lng]="lng"
                     (closeWindow)="infoObjectWindow.open = false" 
                     *ngIf="infoObjectWindow.open">
   </app-info-object>
 
-  <app-user-info-object [currentMarker]="currentMarker" *ngIf="sliderRight" [lat]="lat" [lng]="lng" (close)="sliderRight = false"></app-user-info-object>
+  <app-user-info-object [currentMarker]="currentMarker" 
+                      *ngIf="sliderRight" 
+                      [lat]="lat" [lng]="lng" 
+                      (close)="sliderRight = false"></app-user-info-object>
 
   <app-my-favorites *ngIf="myFavoritesWindow.open" (closeWindow)="closeFavorites()"></app-my-favorites>
 
