--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.css
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.css
@@ -17,3 +17,8 @@
 .sb-userName{
     text-transform: uppercase;
 }
+@media(max-width:768px){
+    .sb-desktopNavBar{
+        display: none;
+    }
+}
