--- a/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.css
+++ b/src/app/spotbie/map/info-object/nearby-featured-ad/nearby-featured-ad.component.css
@@ -17,7 +17,7 @@
     z-index: 9;
 }
 .sb-sponsored{
-    position: absolute;
+    position: relative;
     top: 17px;
     right: 14px;
     font-size: .5rem;
@@ -31,19 +31,19 @@
 }
 
 .sb-perDollar{
-    position: absolute;
+    position: relative;
     bottom: 17px;
     right: 14px;
     font-size: .5rem;
 }
 .sb-address {
-    position: absolute;
+    position: relative;
     bottom: 41px;
     right: 14px;
     font-size: .5rem;
 }
 .sb-categoryList{
-    position: absolute;
+    position: relative;
     bottom: 10px;
     right: 14px;
     font-size: .5rem;
@@ -78,13 +78,7 @@
     z-index: 0;
     pointer-events: none;   
 }
-.sb-ad-top{
-    position: relative;
-    background-color: rgb(28 25 36) !important;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
+
 .sb-ad-bottom{
     position:relative;
     background-color: rgb(28 25 36) !important;
@@ -92,12 +86,7 @@
     left: 0;
     width: 100%;
     font-size: .6rem;
-}
-.sb-perDollarTopAd{
-    position: absolute;
-    top: 120px;
-    right: 14px;
-    font-size: 1rem;
+    padding-top: 20px;
 }
 
 .spotbie-ad-wrapper-header{
@@ -121,7 +110,7 @@
 .sb-categoryList,
 .sb-address{
     position: relative;
-    display: inline-block;
+    display: block;
     top: unset;
     right: unset;
     bottom: unset;        
@@ -131,7 +120,6 @@
     margin-top: 18px;
 }
 
-.sb-perDollar
 .sb-categoryList{
     margin-bottom: 25px;        
 } 
@@ -143,7 +131,8 @@
     margin-top: 10px;
 }      
 .sb-perDollar{
-   padding-bottom: 5px;
+    padding-bottom: 25px;
+    font-size: 1rem;
 } 
 
 @media (max-width: 1100px) { 
@@ -155,4 +144,16 @@
         min-width: 100%;
         max-width: 100%;
     }
+}
+@media (max-width: 460px) { 
+    .spotbie-ad-image{
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+    }
+    .spotbie-ad-wrapper-header{
+        width: 98%;
+        min-width: 98%;
+        max-width: 98%;
+    }    
 }
