--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="isLoggedIn == '1' && (userType !== eAllowedAccountTypes.Personal && userType !== eAllowedAccountTypes.Unset)">
 
-    <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">SPOTBIE LOYALTY MENU</h4>
+    <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">REWARD MENU</h4>
 
     <p class="spotbie-loyaltyMenuDescription spotbie-text-gradient text-center mt-2">
         These are the rewards that your business will offer to the spotbie community.
@@ -51,10 +51,10 @@
         {{ business.name }}
     </h4>
 
-    <h5 class="spotbie-text-gradient text-center text-uppercase pt-2 mb-4">LOYALTY MENU</h5>
+    <h5 class="spotbie-text-gradient text-center text-uppercase pt-2 mb-4">REWARD MENU</h5>
 
     <p class="spotbie-text-gradient text-center mt-4 mb-4">
-        Pay with your SpotBie Loyalty Points.
+        Pay with SpotBie Loyalty Points
     </p>
     
     <div class='sb-menuItemWrapper'>
